--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -53,7 +53,61 @@
           {{ form.seeking_description(class_ = 'form-control', autofocus = true) }}
       </div>
       
-      <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
+      <input onclick="editArtist({{artist.id}})" type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
+  <script>
+    const editArtist = (id) => {
+      event.preventDefault();
+      console.log(id)
+      let form = document.querySelector(".form");
+      var data = {};
+  
+      let allElements = form.elements;
+      for (var i = 0; i < allElements.length; i++) {
+        let element = allElements[i];
+        let name = element.name;
+        let value = element.value;
+        if (value && name) {
+          if (name === "genres") {
+            // Get selected genres as an array
+            let selectedGenres = [];
+            for (let option of element.options) {
+              if (option.selected) {
+                selectedGenres.push(option.value);
+              }
+            }
+            data[name] = selectedGenres;
+          } else if (value && name) {
+            data[name] = value;
+          }
+        }
+      }
+      console.log(data);
+      const headers = {
+        "Content-Type": "application/json",
+      };
+      fetch(`/artists/${id}/edit`, {
+        method: "POST",
+        headers: headers,
+        body: JSON.stringify(data),
+      })
+        .then((response) => response.json())
+        .then((data) => {
+          if (data.success) {
+            const flashMessage = document.getElementById("flash-message");
+            if (flashMessage) {
+              flashMessage.textContent = data.message;
+              flashMessage.classList.add("success");
+              flashMessage.style.display = "block";
+            }
+            window.location.href = "{{ url_for('artists') }}";
+
+          }
+        })
+        .catch((error) => {
+          console.error(error);
+        });
+    };
+  </script>
 {% endblock %}
