--- a/templates/forms/new_show.html
+++ b/templates/forms/new_show.html
@@ -1,24 +1,71 @@
-{% extends 'layouts/main.html' %}
-{% block title %}New Show Listing{% endblock %}
-{% block content %}
-  <div class="form-wrapper">
-    <form method="post" class="form">
-      <h3 class="form-heading">List a new show</h3>
-      <div class="form-group">
-        <label for="artist_id">Artist ID</label>
-        <small>ID can be found on the Artist's Page</small>
-        {{ form.artist_id(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-        <label for="venue_id">Venue ID</label>
-        <small>ID can be found on the Venue's Page</small>
-        {{ form.venue_id(class_ = 'form-control', autofocus = true) }}
-      </div>
-      <div class="form-group">
-          <label for="start_time">Start Time</label>
-          {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
-        </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
-    </form>
-  </div>
+{% extends 'layouts/main.html' %} {% block title %}New Show Listing{% endblock
+%} {% block content %}
+<div class="form-wrapper">
+  <form class="form">
+    <h3 class="form-heading">List a new show</h3>
+    <div class="form-group">
+      <label for="artist_id">Artist ID</label>
+      <small>ID can be found on the Artist's Page</small>
+      {{ form.artist_id(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="venue_id">Venue ID</label>
+      <small>ID can be found on the Venue's Page</small>
+      {{ form.venue_id(class_ = 'form-control', autofocus = true) }}
+    </div>
+    <div class="form-group">
+      <label for="start_time">Start Time</label>
+      {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD
+      HH:MM', autofocus = true) }}
+    </div>
+    <input
+      onclick="submitForm(event)"
+      type="submit"
+      value="Create Venue"
+      class="btn btn-primary btn-lg btn-block"
+    />
+  </form>
+</div>
+<script>
+  const submitForm = (event) => {
+    event.preventDefault();
+    let form = document.querySelector(".form");
+    var data = {};
+
+    let allElements = form.elements;
+    for (var i = 0; i < allElements.length; i++) {
+      let element = allElements[i];
+      let name = element.name;
+      let value = element.value;
+      if (value && name) {
+        data[name] = value;
+      }
+    }
+    console.log(data)
+    const headers = {
+      "Content-Type": "application/json",
+    };
+    fetch("/shows/create", {
+      method: "POST",
+      headers: headers,
+      body: JSON.stringify(data),
+    })
+      .then((response) => response.json())
+      .then((data) => {
+        if (data.success) {
+          const flashMessage = document.getElementById("flash-message");
+          console.log(flashMessage);
+          if (flashMessage) {
+            flashMessage.textContent = data.message;
+            flashMessage.classList.add("success");
+            flashMessage.style.display = "block";
+          }
+          window.location.href = "{{ url_for('index') }}";
+        }
+      })
+      .catch((error) => {
+        console.error(error);
+      });
+  };
+</script>
 {% endblock %}
