--- a/templates/forms/new_show.html
+++ b/templates/forms/new_show.html
@@ -44,6 +44,7 @@
     console.log(data)
     const headers = {
       "Content-Type": "application/json",
+      "X-CSRFToken": "{{ csrf_token() }}"
     };
     fetch("/shows/create", {
       method: "POST",
