--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -106,6 +106,7 @@ block content %}
     }
     const headers = {
       "Content-Type": "application/json",
+      "X-CSRFToken": "{{ csrf_token() }}"
     };
     fetch("/venues/create", {
       method: "POST",
