--- a/templates/forms/edit_artist.html
+++ b/templates/forms/edit_artist.html
@@ -85,8 +85,9 @@
       }
       console.log(data);
       const headers = {
-        "Content-Type": "application/json",
-      };
+      "Content-Type": "application/json",
+      "X-CSRFToken": "{{ csrf_token() }}"
+     };
       fetch(`/artists/${id}/edit`, {
         method: "POST",
         headers: headers,
